# loki

./: .env.example  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  index.html  pyproject.toml
docs/: ARCHITECTURE.md
src/loki/: __init__.py  __main__.py  cli.py  config.py  core.py  models.py  parser.py  session.py
tests/: test_core.py  test_parser.py  test_session.py
